--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "autor": "zkov",
   "devDependencies": {
-    "electron-prebuilt": "^0.36.8"
+    "electron-prebuilt": "^0.36.8",
+    "less": "^2.6.0"
   }
 }
